# Ussop

./: .env.example  .gitignore  BEFORE_AND_AFTER.md  CHANGELOG.md  CLEANUP_SUMMARY.txt  LICENSE  PROJECT_STRUCTURE.md  README.md  START_HERE.md  TEST_REPORT.md  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 8f190eb50fce_initial_schema.py
docker/: Dockerfile  docker-compose.yml
docker/nginx/: nginx.conf
docker/prometheus/: prometheus.yml
docs/: APP_README.md  FEATURES.md  PROJECT_SUMMARY.md  STATUS_REPORT.md  api.md  architecture.md  deployment.md  onboarding.md  pitch_deck.md  plan.md  user_stories.md
examples/: demo.py  detector.py  pipeline.py  predictor.py  safety_checker.py
scripts/: build_frontend.py  download_models.py  migrate.py
ussop/: __init__.py  run.py  run_tests.py  setup.py  worker.py
ussop/api/: __init__.py  main.py
ussop/config/: __init__.py  settings.py
ussop/core/: __init__.py
ussop/frontend/: index.html  package-lock.json  package.json  replace.cjs  tsconfig.json  vite.config.ts
ussop/frontend/src/: App.tsx
ussop/frontend/src/components/layout/: AppShell.tsx  Header.tsx  Sidebar.tsx
ussop/frontend/src/components/shared/: DecisionBadge.tsx  EmptyState.tsx  LoadingSpinner.tsx  MiniMarkdown.tsx  Pagination.tsx
ussop/frontend/src/components/ui/: AlertDialog.tsx  Badge.tsx  Button.tsx  Card.tsx  Dialog.tsx  Progress.tsx  Select.tsx  Slider.tsx  Switch.tsx  Toast.tsx
ussop/frontend/src/pages/: Alerts.tsx  Analytics.tsx  Annotate.tsx  Batch.tsx  Config.tsx  Dashboard.tsx  History.tsx  Inspect.tsx  Login.tsx  Query.tsx  Stations.tsx
ussop/frontend/src/styles/: main.css
ussop/frontend/src/types/: api.ts
ussop/integrations/: __init__.py  modbus_server.py  mqtt_client.py  opcua_server.py
ussop/services/: __init__.py  active_learning.py  auth_service.py  batch_processor.py  cache.py  camera.py  camera_manager.py  inspector.py  model_deployer.py  model_trainer.py  monitoring.py  notifications.py  openvino_optimizer.py  vlm_service.py
ussop/static/css/: style.css
ussop/static/js/: auth.js
ussop/tests/: __init__.py  conftest.py  test_active_learning.py  test_api_endpoints.py  test_auth.py  test_batch_processor.py  test_cache.py  test_camera.py  test_database.py  test_inspector.py  test_model_deployer.py  test_model_trainer.py  test_monitoring.py  test_notifications.py  test_openvino.py  test_performance.py  test_vlm_service.py  test_worker.py
